@@ -4008,13 +4008,18 @@ process_hr(struct parsed_tag *tag, int width, int indent_width)
     Str tmp = Strnew_charp("<nobr>");
     int w = 0;
     int x = ALIGN_CENTER;
+#define HR_ATTR_WIDTH_MAX 65535
 
     if (width > indent_width)
 	width -= indent_width;
-    if (parsedtag_get_value(tag, ATTR_WIDTH, &w))
+    if (parsedtag_get_value(tag, ATTR_WIDTH, &w)) {
+	if (w > HR_ATTR_WIDTH_MAX) {
+	    w = HR_ATTR_WIDTH_MAX;
+	}
 	w = REAL_WIDTH(w, width);
-    else
+    } else {
 	w = width;
+    }
 
     parsedtag_get_value(tag, ATTR_ALIGN, &x);
     switch (x) {
